# tseries

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: anomaly.rs  forecast.rs  gapfill.rs  lib.rs  main.rs  output.rs  reader.rs  resample.rs  seasonality.rs  stats.rs  trend.rs  visualize.rs
tests/: integration.rs
